# consultplace-bot

./: .coverage  .env.sample  .gitignore  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: backend.py
bot/routers/: new_order.py  new_router.py  order_ai.py  registration.py
consultplace_bot/: __main__.py  config.py
consultplace_bot/api/: backend.py
consultplace_bot/bot/: __init__.py  storage.py
consultplace_bot/bot/routers/: __init__.py  match_ai.py  new_order.py  order_ai.py  orders_list.py  registration.py
consultplace_bot/db/: __init__.py
tests/: .coverage  conftest.py  test_ai_match.py  test_ai_tz.py  test_backend_client.py  test_backend_happy.py  test_handlers_smoke.py  test_my_orders.py  test_new_order.py  test_registration_flow_skip.py  test_smoke.py
