[project]
name = "consultplace-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "youstars",email = "youstars.tech@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "aiogram (>=3.5,<4.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.0,<6.0)",
    "celery (>=5.4,<6.0)",
    "httpx (>=0.27,<1.0)",
    "structlog (>=24.1,<25.0)",
    "pydantic-settings (>=2.2,<3.0)",
    "sentry-sdk (>=1.45,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.12"
mypy = "^1.16.0"
aiogram-tests = "^1.0.3"

