[project]
name = "consultplace-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "youstars",email = "youstars.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.5,<4.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.0,<6.0)",
    "celery (>=5.4,<6.0)",
    "httpx (>=0.27,<1.0)",
    "structlog (>=24.1,<25.0)",
    "pydantic-settings (>=2.2,<3.0)",
    "sentry-sdk (>=1.45,<2.0)"
]


[tool.poetry]
name = "consultplace_bot"
version = "0.1.0"
description = "MVP Telegram-бот ConsultPlace"
authors = ["Miltiadis Kurdzidis <you@example.com>"]
readme = "README.md"
packages = [{include = "consultplace_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "~3.5"
sqlalchemy = "~2.0"
asyncpg = "*"
redis = "~5.0"
celery = "~5.4"
httpx = "~0.27"
structlog = "~24.1"
pydantic-settings = "~2.2"
sentry-sdk = "~1.45"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
aiogram-tests = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
